--- a/.github/workflows/build-and-push-container-image.yml
+++ b/.github/workflows/build-and-push-container-image.yml
@@ -3,34 +3,40 @@ name: Build and Push Container Image
 on:
   push:
     branches: [ "master" ]
-  # pull_request:
-  #   branches: [ "master" ]
 
 jobs:
-
   build:
-
     runs-on: ubuntu-latest
 
     steps:
-      -
-        name: Set up Docker Buildx
+      - name: Set up Docker Buildx
         uses: docker/setup-buildx-action@v3
         
-      - 
-        name: Login to Artifactory
+      - name: Login to Artifactory
         uses: docker/login-action@v3
         with:
           registry: ${{ secrets.ARTIFACTORY_DOCKER_REPO_HOSTNAME }}
           username: ${{ secrets.ARTIFACTORY_USERNAME }}
           password: ${{ secrets.ARTIFACTORY_PASSWORD }}
 
-      -
-        name: Build and push
+      - name: Build and push
         uses: docker/build-push-action@v5
         with:
           push: true
           tags: docker.packages.octopushq.com/octopusdeploy/nfs-server:latest
+          platforms: linux/amd64,linux/arm64
+
+      - name: Login to DockerHub
+        uses: docker/login-action@v3
+        with:
+          username: ${{ secrets.DOCKERHUB_USERNAME }}
+          password: ${{ secrets.DOCKERHUB_TOKEN }}
+
+      - name: Build and push
+        uses: docker/build-push-action@v5
+        with:
+          push: true
+          tags: octopusdeploy/nfs-server:latest
           platforms: linux/amd64,linux/arm64
 
         
