Fix Tag Commit Github Action (#8)
* Fix tag commit action

* Add changeset

--- a/.github/workflows/build-and-push-container-image.yml
+++ b/.github/workflows/build-and-push-container-image.yml
@@ -28,7 +28,7 @@ jobs:
             echo "VERSION=$version";
         id: version
 
-      - if: ${{ steps.isVersioningCommit.outputs.IS_VERSIONING_COMMIT == true }}
+      - if: steps.isVersioningCommit.outputs.IS_VERSIONING_COMMIT
         name: Tag Commit
         uses: laputansoft/github-tag-action@v4.6
         with:
