Fix tag commit action 2nd try (#10)
* Maybe this?

* for testing

* for testing

* more debugging

* Try it

* One more

* More changes

* to test

* revert testing changes

* Tidy up

* add changeset file

--- a/.github/workflows/build-and-push-container-image.yml
+++ b/.github/workflows/build-and-push-container-image.yml
@@ -17,36 +17,37 @@ jobs:
       - name: Is Versioning Commit
         run: |
             isVersioningCommit=${{ startsWith(github.event.commits[0].message, 'Version NFS Server Chart') }};
-            echo "IS_VERSIONING_COMMIT=$isVersioningCommit" >> $GITHUB_OUTPUT;
-            echo "IS_VERSIONING_COMMIT=$isVersioningCommit";
+            declare -p isVersioningCommit;
+            echo "isVersioningCommit=$isVersioningCommit" >> $GITHUB_OUTPUT;
+            echo "isVersioningCommit=$isVersioningCommit";
         id: isVersioningCommit
 
       - name: Get Version
         run: |
             version=$(jq -r .version package.json);
-            echo "VERSION=$version" >> $GITHUB_OUTPUT;
-            echo "VERSION=$version";
+            echo "version=$version" >> $GITHUB_OUTPUT;
+            echo "version=$version";
         id: version
 
-      - if: steps.isVersioningCommit.outputs.IS_VERSIONING_COMMIT
+      - if: steps.isVersioningCommit.outputs.isVersioningCommit == 'true'
         name: Tag Commit
         uses: laputansoft/github-tag-action@v4.6
         with:
           github_token: ${{ secrets.GITHUB_TOKEN }}
-          tag: ${{ steps.version.outputs.VERSION }}
+          tag: ${{ steps.version.outputs.version }}
 
       - name: Get Tags
         run: |
-            if ${{ steps.isVersioningCommit.outputs.IS_VERSIONING_COMMIT }}; then
-                tagVersion=${{ steps.version.outputs.VERSION }}
+            if ${{ steps.isVersioningCommit.outputs.isVersioningCommit }}; then
+                tagVersion=${{ steps.version.outputs.version }}
                 tags="octopusdeploy/nfs-server:$tagVersion,docker.packages.octopushq.com/octopusdeploy/nfs-server:$tagVersion,octopusdeploy/nfs-server:latest,docker.packages.octopushq.com/octopusdeploy/nfs-server:latest";
             else
                 : # git describe --tags produces a value matching <tag>-<commits since tag>-<8 char commit hash>
                 tagVersion=$(git describe --tags)
                 tags="docker.packages.octopushq.com/octopusdeploy/nfs-server:$tagVersion";
             fi
-            echo "TAGS=$tags" >> $GITHUB_OUTPUT;
-            echo "TAGS=$tags";
+            echo "tags=$tags" >> $GITHUB_OUTPUT;
+            echo "tags=$tags";
         id: tags
 
       - name: Set up Docker Buildx
@@ -71,6 +72,6 @@ jobs:
     #     uses: docker/build-push-action@v5
     #     with:
     #       push: true
-    #       tags: ${{ steps.tags.outputs.TAGS }}
+    #       tags: ${{ steps.tags.outputs.tags }}
     #       platforms: linux/amd64,linux/arm64
 
