--- a/.github/workflows/build-and-push-container-image.yml
+++ b/.github/workflows/build-and-push-container-image.yml
@@ -29,7 +29,7 @@ jobs:
             echo "version=$version";
         id: version
 
-      - if: steps.isVersioningCommit.outputs.isVersioningCommit == 'true'
+      - if: steps.isVersioningCommit.outputs.isVersioningCommit == 'false'
         name: Tag Commit
         run: |
             git tag -l ${{ steps.version.outputs.version }}
